--- a/plugin.xml
+++ b/plugin.xml
@@ -15,7 +15,7 @@
     </engines>
 
     <js-module src="www/barcodescanner.js" name="BarcodeScanner">
-        <clobbers target="cordova.plugins.vinScanner" />
+        <clobbers target="cordova.plugins.barcodeScanner" />
     </js-module>
 
     <!-- ios -->
