--- a/src/android/LibraryProject/AndroidManifest.xml
+++ b/src/android/LibraryProject/AndroidManifest.xml
@@ -16,7 +16,7 @@
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.google.zxing.client.android"
-          android:versionName="4.3.1"
+          android:versionName="7.0.1"
           android:versionCode="87"
           android:installLocation="auto">
 
@@ -30,10 +30,10 @@
   <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
-  <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="25"/>
+  <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="24"/>
 
   <!-- Don't require camera, as this requires a rear camera. This allows it to work on the Nexus 7 -->
-  <uses-feature android:name="android.hardware.camera" android:required="true"/>
+  <uses-feature android:name="android.hardware.camera"/>
   <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
   <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
   <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
