--- a/plugin.xml
+++ b/plugin.xml
@@ -95,6 +95,7 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.CAMERA" />
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.FLASHLIGHT" />
             <!-- Not required to allow users to work around this -->
             <uses-feature android:name="android.hardware.camera" android:required="true" />
